[profile.dev]
split-debuginfo = 'unpacked'

[profile.release]
overflow-checks = true
panic           = 'unwind'

[profile.production]
codegen-units = 1
inherits      = 'release'
lto           = true

[workspace]
members = ['node/*', 'pallets/*', 'runtime/*', 'support', 'precompiles/*','integration-tests']

[workspace.package]
authors     = ['Parallel Team']
repository  = 'https://github.com/parallel-finance/parallel'
version     = '1.9.8'

[workspace.dependencies]
codec                  = { package = 'parity-scale-codec', version = '3.1.5', default-features = false }
derive_more            = '0.15.0'

hex-literal            = '0.3.4'
jsonrpsee              = '0.16.2'
log                    = '0.4.13'
futures                = '0.3.1'
async-trait            = '0.1.42'
clap                   = '4.0.9'
serde                  = '1.0.136'
serde_json             = '1.0.79'
tracing-core           = '0.1.30'

# Substrate dependencies
sc-basic-authorship     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-chain-spec           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-cli                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-client-api           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-executor             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-keystore             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-rpc                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-rpc-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-service              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36'}
sc-telemetry            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-tracing              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-transaction-pool     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-network              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-network-common       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus-aura       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sc-consensus-manual-seal = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
try-runtime-cli              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
frame-benchmarking           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
frame-benchmarking-cli       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
pallet-transaction-payment-rpc             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

substrate-frame-rpc-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.36" }

sp-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-block-builder    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-blockchain       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-consensus        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-consensus-aura   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-core             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-inherents        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-keystore         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-offchain         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-session          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-std              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-storage          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-timestamp        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-trie             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
sp-io               = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

# Polkadot dependencies
polkadot-cli        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }
polkadot-parachain  = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }
polkadot-service    = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.36' }

# Cumulus dependencies
cumulus-client-cli                      = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-collator                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-aura           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-network                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-service                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-primitives-core                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-primitives-parachain-inherent   = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-interface           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-rpc-interface       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-common         = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-client-consensus-relay-chain    = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }
cumulus-relay-chain-minimal-node        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.36' }

# ORML dependencies
orml-oracle-rpc            = { version = '0.4.1-dev', default-features = false }

# Frontier dependencies
fc-consensus = { version='2.0.0-dev' }
fc-db = { version='2.0.0-dev' }
fc-mapping-sync = { version='2.0.0-dev' }
fc-rpc = { version='2.0.0-dev' }
fc-rpc-core = { version='1.1.0-dev' }
fp-consensus = { version='2.0.0-dev' }
fp-evm = { version='3.0.0-dev', default-features = false }
fp-storage = { version='2.0.0' }
fp-dynamic-fee = { version='1.0.0' }
fp-rpc                          = { version='3.0.0-dev'}
fp-self-contained               = { version='1.0.0-dev'}
pallet-base-fee                 = { version='1.0.0'}
pallet-ethereum                 = { version='4.0.0-dev', features = ['forbid-evm-reentrancy']}
pallet-evm                      = { version='6.0.0-dev', features = ['forbid-evm-reentrancy']}

# Parallel dependencies
pallet-loans-rpc                           = { path = './pallets/loans/rpc' }
pallet-router-rpc                          = { path = './pallets/router/rpc' }
primitives = { package = 'parallel-primitives', path = './primitives' }
heiko-runtime                              = { path = './runtime/heiko' }
parallel-runtime                           = { path = './runtime/parallel' }
kerria-runtime                             = { path = './runtime/kerria' }
vanilla-runtime                            = { path = './runtime/vanilla' }

[patch.crates-io]
#orml
orml-oracle                 = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-oracle-rpc             = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-oracle-rpc-runtime-api = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-traits                 = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-vesting                = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-xcm                    = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-xcm-support            = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
orml-xtokens                = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'db0381f6363e0c8e781082b6f552c092b688fb1c' }
#evm
fc-consensus                = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fc-db                       = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fc-mapping-sync             = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fc-rpc                      = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fc-rpc-core                 = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-consensus                = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-evm                      = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-rpc                      = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-storage                  = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-dynamic-fee              = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-ethereum             = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm                  = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
fp-self-contained               = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-base-fee                 = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-blake2    = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-bn128     = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-dispatch  = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-ed25519   = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-modexp    = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-sha3fips  = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
pallet-evm-precompile-simple    = { git = 'https://github.com/parallel-finance/frontier.git', rev = '977dab0774152e0be5779b73cccb6756ce48de38' }
